--- a/rover/partials/reports/dailyProduction/rvDailyProductionRateReport.html
+++ b/rover/partials/reports/dailyProduction/rvDailyProductionRateReport.html
@@ -1,4 +1,3 @@
-<!-- Report content -->
 <div ng-show="hasNoResults" class="report-content no-content">
     <div class="info">
         <span class="icon-no-content icon-reports"></span>
@@ -7,58 +6,83 @@
     </div>
 </div>
 
-<!-- <div ng-hide="hasNoResults" -->
-<div ng-hide="hasNoResults" id="report-content" class="report-content statistics" ng-controller="RVDailyProdRateReport.Controller">
+<span ng-hide="hasNoResults" ng-controller="RVDailyProdRateReport.Controller">
+    <div id="report-content" class="report-content statistics">
 
-    <!-- Left side - table legend. Number of list items here should be identical to the number of table rows on the right side  -->
-    <div class="statistics-headings">
-        <div class="scrollable" ng-iscroll="left-pane-scroll"> <!-- Attach iscroll here, should scroll vertically. While scrolling it should update iscoll on the right side as well -->
-            <ul class="wrapper">
-                <li class="main-heading action-row"> <!-- Toggle what's shown in grid (only 1 item can be disabled, never both!) -->
-                    <div class="switch-button" ng-class="{ 'on': uiFilter.showAvailability }"> <!-- Remove class 'on' if not checked, disable second switch button, update width set in L188, update colspan on L192 -->
-                        <input id="daily-production-availability" ng-model="uiFilter.showAvailability" type="checkbox" />
-                        <label class="data-off">
-                            <span class="value">Availability</span>
-                            <span class="switch-icon">Hidden</span>
-                        </label>
-                        <label class="data-on">
-                            <span class="switch-icon">Showing</span>
-                            <span class="value">Availability</span>
-                        </label>
-                    </div>
-                    <div class="switch-button" ng-class="{ 'on': uiFilter.showRevenue }"> <!-- Remove class 'on' if not checked, disable first switch button, update width set in L188, update colspan on L192-->
-                        <input id="daily-production-revenue" ng-model="uiFilter.showRevenue" type="checkbox" />
-                        <label class="data-off">
-                            <span class="value">Revenue</span>
-                            <span class="switch-icon">Hidden</span>
-                        </label>
-                        <label class="data-on">
-                            <span class="switch-icon">Showing</span>
-                            <span class="value">Revenue</span>
-                        </label>
-                    </div>
-                </li>
-                <li ng-repeat="label in yAxisLabels track by $index">
-                    <em ng-show="!label.is_rate_type">{{ label.name }}</em>
-                    <strong ng-show="label.is_rate_type">{{ label.name }}</strong>
-                </li>
-            </ul>
+        <!-- Left side - table legend. Number of list items here should be identical to the number of table rows on the right side  -->
+        <div class="statistics-headings">
+            <div class="scrollable" ng-iscroll="left-pane-scroll"> <!-- Attach iscroll here, should scroll vertically. While scrolling it should update iscoll on the right side as well -->
+                <ul class="wrapper">
+                    <li class="main-heading action-row"> <!-- Toggle what's shown in grid (only 1 item can be disabled, never both!) -->
+                        <div class="switch-button" ng-class="{ 'on': uiFilter.showAvailability }"> <!-- Remove class 'on' if not checked, disable second switch button, update width set in L188, update colspan on L192 -->
+                            <input id="daily-production-availability" ng-model="uiFilter.showAvailability" type="checkbox" />
+                            <label class="data-off">
+                                <span class="value">Availability</span>
+                                <span class="switch-icon">Hidden</span>
+                            </label>
+                            <label class="data-on">
+                                <span class="switch-icon">Showing</span>
+                                <span class="value">Availability</span>
+                            </label>
+                        </div>
+                        <div class="switch-button" ng-class="{ 'on': uiFilter.showRevenue }"> <!-- Remove class 'on' if not checked, disable first switch button, update width set in L188, update colspan on L192-->
+                            <input id="daily-production-revenue" ng-model="uiFilter.showRevenue" type="checkbox" />
+                            <label class="data-off">
+                                <span class="value">Revenue</span>
+                                <span class="switch-icon">Hidden</span>
+                            </label>
+                            <label class="data-on">
+                                <span class="switch-icon">Showing</span>
+                                <span class="value">Revenue</span>
+                            </label>
+                        </div>
+                    </li>
+                    <li ng-repeat="label in yAxisLabels track by $index">
+                        <em ng-show="!label.is_rate_type">{{ label.name }}</em>
+                        <strong ng-show="label.is_rate_type">{{ label.name }}</strong>
+                    </li>
+                </ul>
+            </div>
         </div>
+
+        <!-- Right side - table numbers. Number of table rows here should be identical to the number of list items on the left side -->
+        <div class="statistics-content scrollable" ng-iscroll="right-pane-scroll"><!-- Attach iscroll here, should scroll vertically and horizontally. While scrolling vertically it should update iscoll on the left side as well -->
+            <div class="wrapper" id="daily-production-render"></div>
+        </div>
+
     </div>
 
-    <!-- Right side - table numbers. Number of table rows here should be identical to the number of list items on the left side -->
-    <div class="statistics-content scrollable" ng-iscroll="right-pane-scroll"><!-- Attach iscroll here, should scroll vertically and horizontally. While scrolling vertically it should update iscoll on the left side as well -->
-
-        <div class="wrapper" id="daily-production-render"></div>
-
+    <!--
+        RIGHT SIDE WRAPPER WIDTH NEEDS TO BE SET INLINE IN ORDER FOR SCROLLING TO WORK OK
+        Table cell width 80px, which is our base to calculate wrapper's width.
+        Other parameters are: L156 and L167 can be on or off
+            - If we're showing both L156 AND L167, wrapper = number of days * 400 ==> 80px * 5 cells
+            - If we're showing ONLY L156, wrapper = number of days * 160 ==> 80px * 2 cells
+            - If we're showing ONLY L167, wrapper = number of days * 240 ==> 80px * 3 cells
+    -->
+    <div class="search-pagination hk-pagination" ng-show="reportMonths.length > 1">
+        <label class="button dark-grey next"
+            ng-click="jumpToMonth(reportMonthTrack.next.index)"
+            ng-show="reportMonthTrack.next"
+        >
+            {{ reportMonthTrack.next.name }}
+        </label>
+        <div class="form button prev" style="padding: 0;">
+            <div class="entry">
+                <div class="select" style="width: 120px;">
+                    <select iscroll-stop-propagation
+                        ng-options="month as month.name for month in reportMonths track by month.index"
+                        ng-model="reportMonthTrack.curr"
+                        ng-change="jumpToMonth(reportMonthTrack.curr.index)"
+                    ></select>
+                </div>
+            </div>
+        </div>
+        <label class="button dark-grey prev"
+            ng-click="jumpToMonth(reportMonthTrack.prev.index)"
+            ng-show="reportMonthTrack.prev"
+        >
+            {{ reportMonthTrack.prev.name }}
+        </label>
     </div>
-</div>
-
-<!--
-    RIGHT SIDE WRAPPER WIDTH NEEDS TO BE SET INLINE IN ORDER FOR SCROLLING TO WORK OK
-    Table cell width 80px, which is our base to calculate wrapper's width.
-    Other parameters are: L156 and L167 can be on or off
-        - If we're showing both L156 AND L167, wrapper = number of days * 400 ==> 80px * 5 cells
-        - If we're showing ONLY L156, wrapper = number of days * 160 ==> 80px * 2 cells
-        - If we're showing ONLY L167, wrapper = number of days * 240 ==> 80px * 3 cells
--->
+</span>
