--- a/admin/partials/snapshotSetup/adSnapshotSubGroupMapping.html
+++ b/admin/partials/snapshotSetup/adSnapshotSubGroupMapping.html
@@ -29,12 +29,12 @@
 			<table class="grid datatable" ng-table="tableParams" template-pagination="custom/pager">
 				<tbody>
 					<tr ng-repeat="item in $data">
-						<td header-class="text-left width-20" data-title="'Code'" sortable="'charge_code'" ng-click="editSelected($index, item.value)" ng-hide="currentClickedElement == $index && isEdit">
+						<td header-class="text-left width-20" data-title="'Code'" sortable="'charge_code'" >
 							<a data-colspan="1" class="edit-data-inline">
 								{{item.charge_code}}
 							</a>
 						</td>
-						<td header-class="text-left width-20"   header-class="text-left" data-title="'Description'" ng-hide="currentClickedElement == $index && isEdit">
+						<td header-class="text-left width-20"   header-class="text-left" data-title="'Description'" >
 							{{item.description}}
 						</td>
 						<!-- <td header-class="width-20" data-title="'Group'" sortable="'charge_group'" ng-hide="currentClickedElement == $index && isEdit" >
@@ -48,7 +48,7 @@
 								{{link}}
 							</div>
 						</td> -->
-						<td header-class="text-left width-20" data-title="'SNAPSHOT SUBGROUP'"  class="delete" ng-hide="currentClickedElement == $index && isEdit">
+						<td header-class="text-left width-20" data-title="'SNAPSHOT SUBGROUP'"  class="delete" >
 							<div class="select">
 								<select ng-model="item.snapshot_subgroup">
 	                                    <option value="">none</option>
@@ -60,6 +60,16 @@
 					</tr>
 				</tbody>
 			</table>
+			<div class="form">
+				<div class="actions float">
+	                    <button type="button" class="button blank add-data-inline" ng-click="goBackToPreviousState()">
+	                        Cancel
+	                    </button>
+	                    <button type="button" class="button green" ng-click="saveMapping()">
+	                        Save changes
+	                    </button>
+	                </div>
+            </div>
 			
 		</section>
 		<!--Custom pagination footer goes here-->
