CICO-35998 style updates

--- a/guestweb/common_css/ponchartrain/theme.less
+++ b/guestweb/common_css/ponchartrain/theme.less
@@ -228,8 +228,11 @@ textarea.sub-text, textarea.sub-text:hover{
   background-color: white;
 }
 .main-text{
-  font-size: 40px  !important;
+  font-size: 38px  !important;
 }
 .sub-text {
     font-size: 16px !important;
+}
+.sub-main-text {
+    font-size: 20px !important;
 }
