CICO-36587 - Style update

--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -1930,7 +1930,7 @@
                     td {
                         line-height: 30px;
                         padding: 0 10px;
-                        min-width: 80px;
+                        width: 80px;
                     }
                 }
 
