CICO-36556 compoleted api integration

--- a/admin/partials/snapshotSetup/adSnapshotChargeGroupMapping.html
+++ b/admin/partials/snapshotSetup/adSnapshotChargeGroupMapping.html
@@ -21,7 +21,7 @@
                             <div class="select select-col">
                                 <select ng-model="snapshotData.default_charge_group">
                                     <option value="">none</option>
-                                    <option ng-repeat="chargeGroup  in chargeGroups" value="{{chargeGroup.value}}" ng-bind="chargeGroup.name"></option>
+                                    <option ng-repeat="chargeGroup  in chargeGroups" value="{{chargeGroup.name}}" ng-bind="chargeGroup.name"></option>
                                 </select>
                             </div>
                         </div>
