CICO-36750 cleanup css

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1424,6 +1424,10 @@
         left:45% !important;
     }
 }
+.top-left-demo{
+    border-left-width: 0px !important;
+    border-bottom-left-radius: 0 !important;
+}
 
 
 
