--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -235,6 +235,7 @@
   &.right{
     left: 112%;
     background-position: 2px -9999px !important;
+    margin-left:2px !important;
   }
 }
 .download-link-txt{
@@ -246,21 +247,25 @@
 .station-lang-download-popup{
   padding: 32px;
 }
+.station-lang-not-result{
+  display:none;
+}
 .language-editor>div.ngdialog-content{
   width: 75% !important;
   overflow: hidden;
 }
 .station-lang-filter{
-  position:relative;
-  right:15px;
+  margin-bottom: 35px;
 }
 
 .station-lang-header{
-  margin-bottom:-25px;
+  margin-bottom: -2px;
 }
+
 .station-lang-content{
   overflow-y: scroll;
   height:75%;
+  margin-top:-5%;
 }
 .station-lang-footer{
   margin-top:5px;
