CICO-36750 updates for Hotel admin and fixes issue in Station Editor Mode

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -256,6 +256,17 @@
 }
 .station-lang-filter{
   margin-bottom: 35px;
+  >input{
+    width: 98%;
+    border-radius: 2em;
+    margin-left: 15px;
+    border-style: double;
+    border-color: rgba(0,0,0,.2);
+    border-width: 1px;
+  }
+  >button{
+    margin-top: -25px !important;
+  }
 }
 
 .station-lang-header{
@@ -266,6 +277,11 @@
   overflow-y: scroll;
   height:75%;
   margin-top:-5%;
+
+  > table > tbody > tr {
+      padding:50px;
+  }
+
 }
 .station-lang-footer{
   margin-top:5px;
