--- a/admin/partials/zestStation/adZestStationLanguageEditor.html
+++ b/admin/partials/zestStation/adZestStationLanguageEditor.html
@@ -2,35 +2,36 @@
 	<p class='station-lang-header'>You can edit the tags in-line, please remember to click the save button before leaving this area
 	</p>
 	<p class='station-lang-filter'>
-		Filter: <input type="text" ng-model='searchbar.value'>
+		 <input type="text" ng-model='searchbar.value' placeholder="Search by Tag or Current Text">
+		 <button type="submit" name="submit" class="icons icon-search" ></button>
 	</p>
 	
 	<br>
 		<div class='station-lang-content'>
-		<table class="grid" id="likes" >
-			<thead>
-				<th>
-					Language Tag
-				</th>
-				<th>
-					Value
-				</th>
-			</thead>
-			<tbody>
-				<tr ng-repeat="(key, value) in languageEditorData" style="padding:50px;"  ng-class='{"station-lang-not-result": showResult(key, value) == "false"}' >
-					<td>
-						{{key}}
-					</td>
-					<td>
-			 		   	<div class="entry">
-			                <input type='text' class="room-likes" ng-model='languageEditorData[key]' value='{{value}}'>
-		                </div>
-					</td>
-				</tr>
-			</tbody>
+			<table class="grid" id="likes" >
+				<thead>
+					<th>
+						Language Tag
+					</th>
+					<th>
+						Current Text
+					</th>
+				</thead>
+				<tbody>
+					<tr ng-repeat="(key, value) in languageEditorData" ng-class='{"station-lang-not-result": showResult(key, value) == "false"}'>
+						<td>
+							{{key}}
+						</td>
+						<td>
+				 		   	<div class="entry">
+				                <input ng-focus='editingTagKey(key)' ng-blur='editingTagKey("")' type='text' class="room-likes" ng-model='languageEditorData[key]' value='{{value}}'>
+			                </div>
+						</td>
+					</tr>
+				</tbody>
 	
-		</table>
-	</div>
+			</table>
+		</div>
 
 	<p class='station-lang-footer'>
 		<button class='button orange' ng-click="closePrompt()">Close</button>
