CICO-34764-1 initial commit

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -390,7 +390,20 @@
       }
 }
 
-
+/*  App icons */
+.dual-app-icons-container{
+    img{
+       max-width:120px;
+    }
+     a:nth-child(2){
+      margin-left:15px;
+    }
+}
+.single-app-icon-container{
+    img{
+      max-width:140px;
+    }
+}
 @media (max-width: 480px) {
     .mob-margin-top-3{
         margin-top:3px !important;
