--- a/admin/partials/lightspeedPOS/adLightspeedPOSSetup.html
+++ b/admin/partials/lightspeedPOS/adLightspeedPOSSetup.html
@@ -1,52 +1,77 @@
 <div id="wrapper" class="content current admin-scrollfix" div-touch-move-stop-propogate ng-click="clearErrorMessage()">
     <header class="content-title float">
         <h2 translate>LIGHT_SPEED_POS_SETUP_HEADER</h2>
-        <a ng-click ="goBackToPreviousState()" class="action back" translate>BACK</a>
+        <a ng-click="goBackToPreviousState()" class="action back" translate>BACK</a>
 
     </header>
     <section class="content-scroll">
         <div ng-include="'/assets/partials/common/notification_message.html'"></div>
-        <div ng-include="'/assets/partials/common/notification_success_message.html'"></div> 
-        <div class="form float" >
-
+        <div ng-include="'/assets/partials/common/notification_success_message.html'"></div>
+        <div class="form float">
             <fieldset class="holder full-width">
-                <div class="form-title full-width">
-                    <h3><span translate>LIGHT_SPEED_POS_SUB_TITLE</span> </h3>
-                </div>
                 <div class="entry full-width">
                     <label><span translate>LIGHT_SPEED_POS_ACTIVATE_INACTIVATE</span></label>
-                    <div name="active-inactive-toggle" class="switch-button single" ng-class="{ on: lightspeed.enabled }" ng-click="toggleLightSpeedPOSEnabled()">
-                        <input type="checkbox" name="brite-pabx-setup-active" id="brite-pabx-setup-active">
+                    <div name="active-inactive-toggle" class="switch-button single"
+                         ng-class="{ on: lightspeed.enabled }" ng-click="toggleLightSpeedPOSEnabled()">
+                        <input type="checkbox">
                         <span class="switch-icon"></span>
                     </div>
                 </div>
+
+                <div class="form-title full-width" ng-if="lightspeed.enabled">
+                    <h3>{{'API_CONFIGURATION_PREFIX' | translate}}
+                        <span translate>CONFIGURATION</span>
+                    </h3>
+                </div>
                 <fieldset class="holder left">
-                    <ad-textbox inputtype="text" value="lightspeed.rover_unique_id" name="rover-unique-id" id="rover-unique-id" label="{{'LIGHT_SPEED_POS_ROVER_UNIQUE_ID'| translate}}" styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
-                    <ad-charge-code-auto-complete exclude-payments="true" ng-model="lightspeed.charge_code_name" selected-charge-code-id="lightspeed.charge_code_id" ng-if="lightspeed.enabled" label="Default Charge Code" entry-div-class="full-width"></ad-charge-code-auto-complete>
+                    <ad-textbox inputtype="text" value="lightspeed.rover_unique_id" name="rover-unique-id"
+                                id="rover-unique-id" label="{{'LIGHT_SPEED_POS_ROVER_UNIQUE_ID'| translate}}"
+                                styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
+                    <ad-charge-code-auto-complete exclude-payments="true" ng-model="lightspeed.charge_code_name"
+                                                  selected-charge-code-id="lightspeed.charge_code_id"
+                                                  ng-if="lightspeed.enabled" label="Default Charge Code"
+                                                  entry-div-class="full-width"></ad-charge-code-auto-complete>
                 </fieldset>
                 <fieldset class="holder right">
-                    <ad-textbox value="lightspeed.username" label="{{'LIGHT_SPEED_POS_USERNAME'| translate}}" ng-if="lightspeed.enabled" styleclass="full-width"></ad-textbox>
-                    <ad-textbox inputtype="password" value="lightspeed.password" label="{{'LIGHT_SPEED_POS_PASSWORD'| translate}}" styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
-               </fieldset>
-                <fieldset class="holder left">
-                    <ad-charge-code-auto-complete ng-model="lightspeed.payment_charge_code_name" only-payments="true" selected-charge-code-id="lightspeed.payment_charge_code_id" ng-if="lightspeed.enabled" label="Default Payment Code" entry-div-class="full-width"></ad-charge-code-auto-complete>
+                    <ad-textbox value="lightspeed.username" label="{{'LIGHT_SPEED_POS_USERNAME'| translate}}"
+                                ng-if="lightspeed.enabled" styleclass="full-width"></ad-textbox>
+                    <ad-textbox inputtype="password" value="lightspeed.password"
+                                label="{{'LIGHT_SPEED_POS_PASSWORD'| translate}}" styleclass="full-width"
+                                ng-if="lightspeed.enabled"></ad-textbox>
                 </fieldset>
-                 <fieldset class="holder right">
-                   <ad-textbox inputtype="uri" value="lightspeed.uri" name="uri" id="uri" label="{{'URI'| translate}}" styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>  
-               </fieldset>
                 <fieldset class="holder left">
-                    <ad-textbox inputtype="text" value="lightspeed.account_number" name="account-number" id="account-number" label="{{'LIGHT_SPEED_POS_ACCOUNT_NUMBER'| translate}}" styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
+                    <ad-charge-code-auto-complete ng-model="lightspeed.payment_charge_code_name" only-payments="true"
+                                                  selected-charge-code-id="lightspeed.payment_charge_code_id"
+                                                  ng-if="lightspeed.enabled" label="Default Payment Code"
+                                                  entry-div-class="full-width"></ad-charge-code-auto-complete>
                 </fieldset>
                 <fieldset class="holder right">
-                    <ad-textbox inputtype="text" value="lightspeed.counterpart_payment_code" label="{{'LIGHT_SPEED_COUNTERPART_PAYMENT_CODE'| translate}}" styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
+                    <ad-textbox inputtype="uri" value="lightspeed.uri" name="uri" id="uri" label="{{'URI'| translate}}"
+                                styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
+                </fieldset>
+                <fieldset class="holder left">
+                    <ad-textbox inputtype="text" value="lightspeed.account_number" name="account-number"
+                                id="account-number" label="{{'LIGHT_SPEED_POS_ACCOUNT_NUMBER'| translate}}"
+                                styleclass="full-width" ng-if="lightspeed.enabled"></ad-textbox>
+                </fieldset>
+                <fieldset class="holder right">
+                    <ad-textbox inputtype="text" value="lightspeed.counterpart_payment_code"
+                                label="{{'LIGHT_SPEED_COUNTERPART_PAYMENT_CODE'| translate}}" styleclass="full-width"
+                                ng-if="lightspeed.enabled"></ad-textbox>
                 </fieldset>
             </fieldset>
 
-            <div class="actions float">
-                <button type="button" id="cancel" class="button blank add-data-inline" ng-click="goBackToPreviousState()" translate>
+            <section ng-if="lightspeed.enabled">
+                <ng-include src="'/assets/partials/interfaces/LightSpeed/adLightSpedRestaurants.html'"></ng-include>
+            </section>
+
+            <div class="actions float" ng-hide="state.mode == 'ADD' || state.selected != null">
+                <button type="button" id="cancel" class="button blank add-data-inline"
+                        ng-click="goBackToPreviousState()" translate>
                     CANCEL
                 </button>
-                <button type="button" like-type="common" id="update" class="button ng-binding green" ng-click="saveLightSpeedPOSSetup()" translate>
+                <button type="button" like-type="common" id="update" class="button ng-binding green"
+                        ng-click="saveLightSpeedPOSSetup()" translate>
                     SAVE_CHANGES
                 </button>
             </div>
