CICO-36750 updates styling for editor mode per jeff

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1477,3 +1477,9 @@
     height: 295px; 
     border-radius: 8px;
 }
+.editor-mode-border{
+    border-style: groove;
+    border-width: 2.5px;
+    border-color: lightgreen;
+    border-radius: 0.2em;
+}
