--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -133,7 +133,7 @@
             <fieldset ng-hide="isHourlyRatesEnabled" class="holder holder full-width">
                 <div class="form-title">
                     <h3>
-                        <span>Exclude from&nbsp;</span>                                                    
+                        <span>Exclude from&nbsp;</span>
                         Rate
                     </h3>
                 </div>
@@ -144,7 +144,7 @@
                             <em class="rate_roomtype_text">Available Rates</em>
                         </label>
                         <ul class="boxes sortable ui-sortable short-list" data-type="source" ng-model="singleAddon.availableRates" data-drop="true" style="overflow-y: scroll !important;" jqyoui-droppable="{multiple:true}" data-jqyoui-options="{accept:'.assigned-room-types'}">
-                            <li ng-repeat="rate in singleAddon.availableRates" data-drag="true" ng-model="singleAddon.availableRates" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" class="non-assigned-room-types li-draggable" ng-click="toggleAvailableRate($index)" ng-class='{selected: state.selectedAvailableRate === $index}'>
+                            <li ng-repeat="rate in singleAddon.availableRates" data-drag="true" ng-model="singleAddon.availableRates" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" class="non-assigned-room-types li-draggable" ng-click="toggleAvailableRate($index)" ng-class='{selected: state.selectedAvailableRate === $index, overlay : !!rate.based_on}'>
                                 <span class="icons icon-handle"></span>
                                 <span class="icons icon-handle"></span> {{rate.name}}
                             </li>
@@ -172,7 +172,7 @@
                         <label class="center_align">
                             <span class="assigned_room_text">Excluded from Rates</span></label>
                         <ul class="boxes sortable ui-sortable short-list" data-type="target" data-drop="true" ng-model="singleAddon.excludedRates" jqyoui-droppable="{multiple:true}" data-jqyoui-options="{accept:'.non-assigned-room-types'}">
-                            <li ng-repeat="rate in singleAddon.excludedRates" ng-model="singleAddon.excludedRates" ng-click="toggleExcludedRate($index)" ng-class='{selected: state.selectedAssignedRate === $index}' class="assigned-room-types li-draggable" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" data-drag="true" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }">
+                            <li ng-repeat="rate in singleAddon.excludedRates" ng-model="singleAddon.excludedRates" ng-click="toggleExcludedRate($index)" ng-class='{selected: state.selectedAssignedRate === $index, overlay : !!rate.based_on}' class="assigned-room-types li-draggable" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" data-drag="true" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }">
                                 <span class="icons icon-handle"></span>
                                 <span class="icons icon-handle"></span> {{rate.name}}
                             </li>
