CICO-36516 - Cut off lengthly page titles

--- a/stylesheets/less/admin/04_layout.less
+++ b/stylesheets/less/admin/04_layout.less
@@ -419,6 +419,9 @@ body { overflow: hidden; }
         }
 
         h2 {
+            max-width: 50%;
+            .nowrap();
+            
             span { color: @grey3; }
         }
 
