--- a/guestweb/common_templates/partials/checkin/gwNewPrecheckinFinal.html
+++ b/guestweb/common_templates/partials/checkin/gwNewPrecheckinFinal.html
@@ -35,15 +35,16 @@
             <p class="sub-main-text top-spacing">{{responseData.confirmation_message}}
             </p>
             <br/><br/>
-            <p class="sub-main-text top-spacing">
-                 <description template="{{mobile_app_text}}">
+            <p class="sub-main-text top-spacing" ng-if="mobileMarketingOn">
+                 <description template="{{mobileAppText}}">
                  </description>
             </p>
             <br>
-            <div ng-class="{'dual-app-icons-container': apps.app_store.available && apps.play_store.available, 'single-app-icon-container': ((apps.app_store.available && !apps.play_store.available) || (!apps.app_store.available && apps.play_store.available))}">
-                <a ng-if="apps.app_store.available" href="apps.app_store.url"><img src="{{apps.app_store.img}}"</a>
-                <a ng-if="apps.play_store.available" href="apps.play_store.url"><img src="{{apps.play_store.img}}"</a>
+            <div ng-class="{'dual-app-icons-container': apps.app_store.available && apps.play_store.available, 'single-app-icon-container': ((apps.app_store.available && !apps.play_store.available) || (!apps.app_store.available && apps.play_store.available))}" ng-if="mobileMarketingOn">
+                <a ng-if="apps.app_store.available" href="{{apps.app_store.url}}"><img src="{{apps.app_store.img}}"</a>
+                <a ng-if="apps.play_store.available" href="{{apps.play_store.url}}"><img src="{{apps.play_store.img}}"</a>
             </div>
+            <br>
             <br>
         </div>
         <div class="col-md-4">
