--- a/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
+++ b/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
@@ -105,8 +105,8 @@
                             </button>
                             <button type="button" ng-click="onUpdate()"
                                     class="button green edit-data-inline"
-                                    ng-class="{'grey' : restaurant.name == '' || restaurant.username == '' || restaurant.password == ''}"
-                                    ng-disabled="restaurant.name == '' || restaurant.username == '' || restaurant.password == ''"
+                                    ng-class="{'grey' : restaurant.name == '' || restaurant.username == ''}"
+                                    ng-disabled="restaurant.name == '' || restaurant.username == ''"
                                     translate>
                                 SAVE_CHANGES
                             </button>
