CICO-36897 - Websocket Handler connectivity status for ChromeApp

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1483,3 +1483,19 @@
     border-color: lightgreen;
     border-radius: 0.2em;
 }
+
+.refresh-svg{
+    background-image: url("../css/icons/default/refresh.svg");
+    background-repeat: no-repeat;   
+    background-size: contain; 
+    width: 4%;
+    height: 45px;
+    background-position: center;
+    margin-top: -55px;
+    right: 45px;
+    position: absolute;
+    
+}
+.refresh-fill{
+    fill: @textColor;
+}
