CICO-36897 adds color / animation requested by jeff for refreshing handler from hotel admin, also fixes issue clicking refresh too quickly and causing multiple connects

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1494,8 +1494,99 @@
     margin-top: -55px;
     right: 45px;
     position: absolute;
-    
+
 }
-.refresh-fill{
-    fill: @textColor;
+
+.red-text{
+    color:red;
+    &.visible{
+        opacity:1;
+    }
 }
+
+.green-text{
+    color:#8eea00;
+    &.visible{
+        opacity:1;
+    }
+}
+
+.station-mini-loader{
+}
+@keyframes station-mini-loader {
+  0%   { opacity:.25; }
+  50%  { opacity:.5; }
+  100% { opacity:.75; }
+}
+@-o-keyframes station-mini-loader{
+  0%   { opacity:.25; }
+  50%  { opacity:.5; }
+  100% { opacity:.75; }
+}
+@-moz-keyframes station-mini-loader{
+  0%   { opacity:.25; }
+  50%  { opacity:.5; }
+  100% { opacity:.75; }
+}
+@-webkit-keyframes station-mini-loader{
+  0%   { opacity:.25; }
+  50%  { opacity:.5; }
+  100% { opacity:.75; }
+}
+.station-mini-loading {
+   -webkit-animation: station-mini-loader 2s infinite;
+   -moz-animation: station-mini-loader 2s infinite;
+   -o-animation: station-mini-loader 2s infinite;
+    animation: station-mini-loader 2s infinite;
+
+    /*content: url("../css/icons/default/sync.svg");*/
+
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 1500ms;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: spin;
+    -moz-animation-duration: 1500ms;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -ms-animation-name: spin;
+    -ms-animation-duration: 1500ms;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+
+    animation-name: spin;
+    animation-duration: 1500ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+    @-ms-keyframes spin {
+        from { 
+            -ms-transform: rotate(0deg); 
+        } to { 
+            -ms-transform: rotate(360deg); 
+        }
+    }
+    @-moz-keyframes spin { 
+        from { 
+            -moz-transform: rotate(0deg); 
+        } to { 
+            -moz-transform: rotate(360deg); 
+        }
+    }
+    @-webkit-keyframes spin { 
+        from { 
+            -webkit-transform: rotate(0deg); 
+        } to { 
+            -webkit-transform: rotate(360deg); 
+        }
+    }
+    @keyframes spin { 
+        from { 
+            transform: rotate(0deg); 
+        } to { 
+            transform: rotate(360deg); 
+        }
+    }
