Fix for CICO-34408

--- a/rover/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryRightFilterBar.html
@@ -1,4 +1,4 @@
-<div class="diary-nightly-sidebar diary-nightly-filters visible" ng-controller="rvNightlyDiaryRightFilterBarController">
+<div class="diary-nightly-sidebar diary-nightly-filters visible" ng-controller="rvNightlyDiaryRightFilterBarController" ng-show="diaryData.showFilterPanel">
     <div class="sidebar-header">
         <h2>Filters</h2>
         <p>Select filters and press "apply"</p>
