CICO-36923 adding print flow to pickup key

--- a/admin/partials/zestStation/adZestStationPickUpKeys.html
+++ b/admin/partials/zestStation/adZestStationPickUpKeys.html
@@ -32,6 +32,19 @@
                 <ad-toggle-button ng-click='zestSettings.qr_scanner_datalogic = false' is-checked="zestSettings.qr_scanner_samsotech" label="{{'QR_SCANNER_TYPE_SAM'| translate}}" div-class="full-width"></ad-toggle-button>
                 <ad-toggle-button ng-click='zestSettings.qr_scanner_samsotech = false' is-checked="zestSettings.qr_scanner_datalogic" label="{{'QR_SCANNER_TYPE_DATA'| translate}}" div-class="full-width"></ad-toggle-button>
             </fieldset>
+             <fieldset class="holder left">
+                 <div id="options" class="entry">
+                    <label translate>REG_CARD_DELIVERY</label>
+                    <label class="radio" ng-class="{'checked':zestSettings.pickup_key_reg_print== 'none'}">
+                        <span class="icon-form icon-radio " ng-class="{checked:zestSettings.pickup_key_reg_print == 'none'}"></span>
+                        <input type="radio" value="none" ng-model="zestSettings.pickup_key_reg_print"> {{ 'NONE' | translate}}
+                    </label>
+                    <label class="radio" ng-class="{'checked':zestSettings.pickup_key_reg_print == 'auto_print'}">
+                        <span class="icon-form icon-radio " ng-class="{checked:zestSettings.pickup_key_reg_print == 'auto_print'}"></span>
+                        <input type="radio" value="auto_print" ng-model="zestSettings.pickup_key_reg_print">{{ 'AUTO_PRINT' | translate}}
+                    </label>
+                </div>
+            </fieldset>
             <div class="actions float">
                 <button type="button" id="cancel" class="button blank add-data-inline" ng-click="goBackToPreviousState()" translate>
                     CANCEL
