--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -515,6 +515,12 @@
 .top-align-keyboard{
     bottom: 54% !important;
     right:9%;
+    &.station-admin-align-keyboard{
+        bottom: 5% !important;
+        background-color:@backgroundColor;
+        width:86% !important;
+        left:7% !important;
+    }
 }
 .bottom-align-keyboard{
     bottom: 10% !important;
