CICO-33122 Reverted removal of endpoint from attribtues

--- a/admin/partials/interfaces/Delphi/adDelphiSetup.html
+++ b/admin/partials/interfaces/Delphi/adDelphiSetup.html
@@ -23,6 +23,10 @@
                     value="config.vendor_id"
                     label="{{'VENDOR_ID'| translate}}"
                     styleclass="full-width"></ad-textbox>
+        <ad-textbox inputtype="text"
+                    value="config.end_point"
+                    label="{{'END_POINT'| translate}}"
+                    styleclass="full-width"></ad-textbox>
     </fieldset>
 
     <fieldset class="holder right">
