--- a/guestweb/common_css/koa_kea/theme.less
+++ b/guestweb/common_css/koa_kea/theme.less
@@ -20,7 +20,7 @@ a,a:hover,.main-text,
     color:#000;
 }
 .header-bar{
-   background-color:#fff;
+   background-color:#103852;
 }
 .template-text,.footer-text,
 .balance-amount,.phone-text,
@@ -29,13 +29,13 @@ a,a:hover,.main-text,
     color: #000 !important;
 }
 .view-bill{
-    color:#877642;
+    color:#9B7B01;
 }
 .sub-text,.sub-text:hover,.query-text,.query-text:hover,.light-text{
     color: #000 !important;
 }
 .btn,.btn:hover{
-    background: #877642;
+    background: #9B7B01;
     color: #fff;
 }
 .dual-button{
@@ -48,19 +48,19 @@ a,a:hover,.main-text,
   padding:4%;
 }
 .dark-button,.dark-button:hover{
-    background: #877642 !important;
+    background: #9B7B01 !important;
 }
 .light-button,.light-button:hover{
-    background: #a2915d !important;
+    background: #AF8C0A !important;
 }
 .checkouttime1,.checkouttime1:hover{
-    background: #a2915d;
+    background: #AF8C0A;
 }
 .checkouttime2,.checkouttime2:hover{
-    background: #877642;
+    background: #9B7B01;
 }
 .checkouttime3,.checkouttime3:hover{
-    background: #685828;
+    background: #8C6F01;
 }
 .no-thanks,.no-thanks:hover{
     color:#000 !important;
@@ -93,13 +93,13 @@ a,a:hover,.main-text,
     background-image: url('/assets/guestweb/common_images/creditcard_icon.png');
 }
 .upgrade-details .upgrades-btn {
-    background: #877642; 
+    background: #9B7B01; 
     p {
       color: #fff;
     }
 }
 .proceed-to-checkin {
-      background: #877642;
+      background: #9B7B01;
       color: #fff;
 }
 .upgrades-label{
@@ -121,7 +121,7 @@ textarea.sub-text, textarea.sub-text:hover{
 }
 
 .pickadate-cell .pickadate-active {
-  background-color: #877642 !important;
+  background-color: #9B7B01 !important;
   color:#fff !important;
 }
 .pickadate-head{
@@ -158,7 +158,7 @@ textarea.sub-text, textarea.sub-text:hover{
   color: #666666;
 }
 .date-picker-header{
-  background-color: #fff;
+  background-color: #103852;
 }
 .calendar-back {
   background-image: url('/assets/guestweb/common_images/black/back_icon.png');
@@ -171,7 +171,7 @@ textarea.sub-text, textarea.sub-text:hover{
     background-size: 20px;
     }
 .pickadate-prev,.pickadate-next,.pickadate-prev:hover,.pickadate-next:hover{
-  color:#877642 !important;
+  color:#9B7B01 !important;
 }
 .green-button, .green-button:hover {
     color: #fff;
@@ -192,11 +192,11 @@ textarea.sub-text, textarea.sub-text:hover{
   color:#000;
 }
 .date-text{
-  color:#000;
+  color:#fff;
 }
 .res-details-heading,.res-details-heading:hover{
     font-size:18px !important;
-    color: #877642;
+    color: #9B7B01;
 }
 .logo-image {
         margin: 3% 0px !important;
