CICO-36764 adding logic to turn of checkin and room delivery settings wrt marketing settings

--- a/admin/partials/zestSetup/adMobileAppMarketing.html
+++ b/admin/partials/zestSetup/adMobileAppMarketing.html
@@ -21,7 +21,7 @@
 		</fieldset>
 	</fieldset>
 	<fieldset class="holder full-width">
-		<ad-form-title full-width="true" form-title="App Store (Android)"></ad-form-title>
+		<ad-form-title full-width="true" form-title="Google Play (Android)"></ad-form-title>
 		<fieldset class="holder left">
 			<ad-toggle-button div-class="full-width" is-checked="data.android.enabled" label="Available" ></ad-toggle-button>
 			<ad-textbox value="data.android.app_name" name="app-name" id="app-name" label="App Name" placeholder="Android App Name"  styleclass="full-width"></ad-textbox>
