--- a/admin/partials/snapshotSetup/adSnapshotSetup.html
+++ b/admin/partials/snapshotSetup/adSnapshotSetup.html
@@ -28,7 +28,7 @@
 
                     
                 </fieldset>
-                <!--<ad-form-title full-width="true" form-title="{{'INCREMENTAL_EXPORT_LABEL' | translate}}"></ad-form-title>
+                <ad-form-title full-width="true" form-title="{{'INCREMENTAL_EXPORT_LABEL' | translate}}"></ad-form-title>
                 <ad-toggle-button is-checked="snapshotData.incremental_export_enabled" label="{{'INCREMENTAL_EXPORT_SWITCH_LABEL'| translate}}"></ad-toggle-button>
                     <label class="radio" ng-class="{'checked':snapshotData.incremental_export_option== 'once'}" ng-show="snapshotData.incremental_export_enabled">
                             <span class="icon-form icon-radio " ng-class="{checked:snapshotData.incremental_export_option=='once'}"></span>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                </fieldset>-->
+                </fieldset>
 
                 <div class="actions float">
                     <button type="button" class="button blank add-data-inline" ng-click="goBackToPreviousState()">
