CICO-36750 fixes QA failure issues

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -119,11 +119,8 @@ select {
     }
 
     &.select-with-button {
-        padding-bottom: 0;
-        margin: 0 10px 0 0;
-        margin-right: 10px;
-        #calc > #width > .remove(85%, 10px);
-        .box-shadow(none);
+        width: 84.1%;
+        margin-right: 0%;
     }
 
     &.with-label {
@@ -174,6 +171,19 @@ select {
     &.action {
         width: 15%;
     }
+}
+
+.clear-nationality-btn{
+    margin-right: -35px;
+}
+.save-nationality-btn{
+    max-width:100%;
+    display:inline-block;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
+.nat-select{
 }
     .ui-autocomplete{
         overflow:hidden;
