--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -172,7 +172,7 @@
                         <label class="center_align">
                             <span class="assigned_room_text">Excluded from Rates</span></label>
                         <ul class="boxes sortable ui-sortable short-list" data-type="target" data-drop="true" ng-model="singleAddon.excludedRates" jqyoui-droppable="{multiple:true}" data-jqyoui-options="{accept:'.non-assigned-room-types'}">
-                            <li ng-repeat="rate in singleAddon.excludedRates" ng-model="singleAddon.excludedRates" ng-click="toggleExcludedRate($index)" ng-class='{selected: state.selectedAssignedRate === $index, overlay : !!rate.based_on}' class="assigned-room-types li-draggable" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" data-drag="true" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }">
+                            <li ng-repeat="rate in singleAddon.excludedRates" ng-model="singleAddon.excludedRates" ng-click="toggleExcludedRate($index)" ng-class='{selected: state.selectedAssignedRate === $index, overlay : rate.is_contract_rate}' class="assigned-room-types li-draggable" data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}" data-drag="true" jqyoui-draggable="{index: {{$index}}, animate:false, onStart:'hideCurrentDragItem', onStop:'showCurrentDragItem' }">
                                 <span class="icons icon-handle"></span>
                                 <span class="icons icon-handle"></span> {{rate.name}}
                             </li>
