CICO-36953 enhances UI debugging info for use in IPad + ChromeApp

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1510,6 +1510,12 @@
         opacity:1;
     }
 }
+.key-in-progress{
+    color: yellow;
+}
+.full-button{
+    width:100%;
+}
 
 .station-mini-loader{
 }
