--- a/admin/partials/zestStation/adZestStationRoomUpsell.html
+++ b/admin/partials/zestStation/adZestStationRoomUpsell.html
@@ -13,20 +13,18 @@
             <label translate>MAX_NUMBER_OF_UPSELL_OFFERS</label>
             <div class="entry full-width float">
                 <div class="select select-col select-margin">
-                    <select ng-model="data.maximum_room_upsell_offers">
-                        <option ng-repeat="maxUpsellOption  in maxUpsellOptions" value="maxUpsellOption">{{maxUpsellOption}}</option>
-                    </select>
+                    <select ng-options="maxUpsellOption as maxUpsellOption for maxUpsellOption  in maxUpsellOptions" ng-model="data.maximum_room_upsell_offers"></select>
                 </div>
             </div>
         </div>
         <div class="entry full-width" ng-show="data.enforce_max_upsell_offered">
             <label translate>OFFER_LEVEL_MIX_INSTRUCTIONS</label>
             <span class="numeric-input-label" translate>TIER_2</span>
-            <input type="text" ng-model="data.upsell_compositions_in_percerntage.tier_2" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier2')" maxlength="2">
+            <input type="text" ng-model="data.upsell_compositions_in_percentage.tier_2" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier2')" maxlength="2">
         </div>
         <div class="entry full-width" ng-show="data.enforce_max_upsell_offered">
             <span class="numeric-input-label" translate>TIER_3</span>
-            <input type="text" ng-model="data.upsell_compositions_in_percerntage.tier_3" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier3')" maxlength="2">
+            <input type="text" ng-model="data.upsell_compositions_in_percentage.tier_3" placeholder="" class="numeric-input-field" ng-change="percentageChanged('tier3')" maxlength="2">
         </div>
         <div id="options" class="full-width entry">
             <br/>
