--- a/login/partials/selectProperty.html
+++ b/login/partials/selectProperty.html
@@ -35,7 +35,6 @@
         </div>
     </form>
     <div class="support">
-        For questions or support please contact your hotel administrator or the StayNTouch service team at
-        <a href="mailto:support@stayntouch.com">support@stayntouch.com</a>
+        For questions please contact your hotel administrator or visit the StayNTouch <a href="https://stayntouch.freshdesk.com/support/home">Support Portal</a> for more information.
     </div>
 </div>
