adding border to OWS msg

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -850,6 +850,8 @@
             z-index: 9000;
             color: @black;
             background: @white;
+            border: 1px #575757 solid;
+            border-radius: 5px;
             opacity: 0;
             z-index: 10;
             #flexbox > .flex();
