--- a/rover/partials/reports/generalReportRows/rvArrivalReportRow.html
+++ b/rover/partials/reports/generalReportRows/rvArrivalReportRow.html
@@ -68,20 +68,20 @@
 		<strong>Cancellation Reason</strong>
 		<p>{{ each.reason }}</p>
 	</td>
-
-	<!-- guest notes -->
-	<td ng-if="each.isGuestNoteData" class="secondary notes" colspan="5">
-		<strong>Guest Notes</strong>
-		<p ng-repeat="note in each.guestNotes">
+	
+	<!-- reservation notes -->
+	<td ng-if="each.isReservationNoteData" class="secondary notes" colspan="5">
+		<strong>Res. Notes</strong>
+		<p ng-repeat="note in each.reservationNotes">
 			{{ note.date | date : dateFormat }} &#8226; {{ note.name }}
 			<span>{{ note.note }}</span>
 		</p>
 	</td>
-
-	<!-- reservation notes -->
-	<td ng-if="each.isReservationNoteData" class="secondary notes" colspan="5">
-		<strong>Reservation Notes</strong>
-		<p ng-repeat="note in each.reservationNotes">
+	
+	<!-- guest notes -->
+	<td ng-if="each.isGuestNoteData" class="secondary notes" colspan="5">
+		<strong>Guest Notes</strong>
+		<p ng-repeat="note in each.guestNotes">
 			{{ note.date | date : dateFormat }} &#8226; {{ note.name }}
 			<span>{{ note.note }}</span>
 		</p>
